feat: add exception messages
- exception messages when failure or not found
- added recipe logic for sub-recipes
- refactoring